<resources>
    <string name="app_name">LetsGo</string>
    <string name="annonce_title">TextView</string>
    <string name="annonce_localisation">TextView</string>
    <string name="annonce_image">TODO</string>
    <string name="annonce_description">TextView</string>
    <string name="annonce_availableP">TextView</string>
    <string name="description">Description :</string>
    <string name="availableP">Available Places :</string>
    <string name="Fees">Price :</string>
    <string name="annonce_price">TextView</string>
    <string name="contacts">TextView</string>
    <string name="annonce_contacts">TextView</string>
    <string name="annonce_participate">LetsGo !</string>
    <string name="annonce_save">TODO</string>
    <string name="annonce_imagee">TODO</string>
    <string name="annonceImg">TODO</string>
    <string name="buttonTest">Button</string>
    <string name="title_activity_list_annonces">listAnnonces</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--    <string name="annonceTitle">TextView</string>-->
    <!--    <string name="annonceTitle">TextView</string>-->
    <string name="annonceImage">TODO</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="textviewCreateAccount">Create an account</string>
    <string name="contact">Contact :</string>
    <string name="duree">Duree :</string>
    <string name="textview">TextView</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrateur</string>
    <string name="nav_header_subtitle">admin@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Ajouter une annonce</string>
    <string name="title_activity_add_to_participants">AddToParticipants</string>
</resources>